<resources>
    <string name="app_name">Picos</string>
    <!--    Welcome Page    -->
    <string name="hello">Hello Beautiful,</string>
    <string name="welcome_desc">Enter your email address and your password for login</string>
    <string name="welcome_to">WELCOME TO PICOS</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_again">Password Again</string>
    <string name="your_buddy">Your Period Buddy</string>


    <string name="name">Name</string>
    <string name="username">Username</string>
    <!-- assessment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="self_assessment">Self Assessment</string>
    <string name="progressbar_start">1/4</string>
    <string name="sample_question">How long have you been married or in a committed relationship?</string>
    <string name="optionone">OptionOne</string>
    <string name="optiontwo">Option Two</string>
    <string name="option_three">Option Three</string>
    <string name="option_four">Option Four</string>
    <string name="btnnext">NEXT</string>
    <string name="btnprev">PREV</string>
    <string name="progresscurrent">currentQuest</string>
    <string name="assessment_dash">Self Assessment</string>
    <string name="assessment_desc">This assessment will help you estimate the current condition of your reproductive health</string>
    <string name="start">Start</string>
    <string name="disclaimer">Disclaimer: This Self Assessment is only an initial diagnosis using machine learning technology and is not 100% accurate, further examination is needed to ensure the correctness of the assessment results</string>
    <string name="well_done">Well Done!</string>
    <string name="sample_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque id pellentesque sem. </string>
    <string name="btnResult">Back to Home</string>
    <!-- assessment -->

    <!--    Home Page    -->
    <string name="calendar">Calendar</string>
    <string name="new_log_button_description">New Log</string>
    <string name="calendar_button_description">Calendar</string>
    <string name="my_cycle">My Cycle</string>
    <string name="question_home">What do you want to do?</string>
    <string name="period">Period:</string>
    <string name="day">8</string>
    <string name="self_assessment_desc">Discover your potential risk for PCOS with our self-assessment feature. Click here and take control of your health today in just a few simple steps.</string>
    <string name="my_cycle_desc">Lorem ipsum dolor sit amet ko wi lulu lulu lulu lulu lulu lulu lulu lulu lulu lulu lulu lulu lullu lulu.</string>

    <!--    Profile & Edit Profile    -->
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>

    <!-- Splash & On Boarding Screen -->
    <string name="ob1_desc">What PCOS is?</string>
    <string name="ob1_content">Polycystic Ovary Syndrome (PCOS) is a hormonal disorder that affects women\'s reproductive health. It can cause irregular periods, fertility challenges, hormonal imbalances, and unwanted physical symptoms such as excessive hair growth and acne.</string>
    <string name="obTwo_title">What is the long-term risks?</string>
    <string name="ob2_content">PCOS also increases the risk of long-term health issues like diabetes, heart disease, and endometrial cancer. Understanding and managing PCOS is crucial for women\'s overall well-being.</string>
    <string name="obthree_title">PiCOS here for you!</string>
    <string name="ob3_content">Provides valuable insights and guidance to help you understand Polycystic Ovary Syndrome (PCOS) and its impact on your body. Learn how to manage symptoms, track your menstrual cycle, and connect with trusted OBGYN specialists for personalized care. Empower yourself with knowledge and proactive measures to live a healthier, happier life.</string>


    <string name="age_category">Which age category do you belong to?</string>
    <string name="age_desc">Age category helps in understanding the potential impact of age-related factors on reproductive health and hormonal balance. It provides insights into the specific age group you belong to for better assessment and recommendations.</string>
    <string name="marry_desc">The duration of marriage or committed relationships can be relevant in understanding potential fertility challenges or hormonal imbalances.</string>
    <string name="option_Yes">Yes</string>
    <string name="option_No">No</string>
    <string name="yesno_question">Are your menstrual cycles regular or irregular?</string>
    <string name="yn_desc">Menstrual cycle regularity refers to the consistent timing and duration of your periods. Regular periods usually vary between 23-35 days. Use our tracker feature to track your period cycle</string>
    <string name="categorical_question">What is your blood group?</string>
    <string name="cat_desc">Knowing your blood group is essential for medical purposes and can impact your health in certain situation.</string>
    <string name="blood_cat">A+</string>
    <string name="blood_cat2">A-</string>
    <string name="fill_question">What is your body mass index (BMI)?</string>
    <string name="fill_desc">BMI is a measure of body fat based on your height and weight. It helps assess if you have a healthy weight or if you are underweight, overweight, or obese. Calculate your BMI using a reliable online calculator or consult with a healthcare professional.</string>
    <string name="numerical_input">Numerical input</string>
    <string name="weight">Your Weight</string>
    <string name="height">Your height</string>
    <string name="button_finished">Finished</string>
    <item name="waistToHip" type="id" />
    <item name="abortion" type="id" />
    <string name="regular">Regular</string>
    <string name="irregular">Irregular</string>
    <string name="question_whist">What is your waist-to-hip ratio?</string>
    <string name="desc_ratio">Waist-to-hip ratio is a measure of body fat distribution and can be an indicator of potential hormonal imbalances. You can calculate the ratio by dividing your waist to your hip size.</string>
    <string name="quest_abortion">Have you had any abortions in the past?</string>
    <string name="desc_abortion">The number of abortions can be relevant to assess potential impacts on reproductive health and hormonal balance.</string>
    <string name="quest_pregnant">Are you currently pregnant or have you been pregnant before?</string>
    <string name="desc_pregnant">Pregnancy history is crucial as it can impact fertility, hormonal balance, and overall reproductive health. It helps in understanding potential risks or complications associated with pregnancy and related conditions like PCOS.</string>
    <string name="quest_weightGain">Have you experienced significant weight gain recently?</string>
    <string name="desc_weightGain">It is important to understand if weight gain is occurring and if it may be related to underlying conditions like PCOS, which can impact overall health and fertility.</string>
    <string name="quest_hairGrowth">Have you noticed excessive or abnormal hair growth on your body?</string>
    <string name="desc_hairGrowth">If you sense any abnormal hair growth on your body parts, such as face, arms and legs, or elsewhere, it is considered ecessive or abnormal hair growth, also known as hirsutism, can be a symptom of hormonal imbalances, including PCOS. </string>
    <string name="quest_skinDarkening">Have you experienced skin darkening or changes in pigmentation?</string>
    <string name="desc_skinDarkening">Skin darkening or hyper-pigmentation can occur due to hormonal changes and imbalances. It is important to monitor any changes in skin coloration, as it may indicate underlying conditions or imbalances that require medical attention.</string>
    <string name="quest_hairLoss">Have you experienced significant hair loss or thinning?</string>
    <string name="desc_hairLoss">Hair loss or thinning can be associated with hormonal imbalances, including those related to PCOS. Understanding changes in hair density and seeking medical guidance can help address potential underlying causes and explore suitable treatments.</string>
    <string name="quest_pimples">Do you frequently experience pimples or acne breakouts?</string>
    <string name="desc_pimples">Monitoring the frequency and severity of breakouts helps in identifying potential hormonal issues and determining appropriate skincare or medical interventions.</string>
    <string name="quest_fastFood">Do you consume fast food frequently?</string>
    <string name="desc_fastFood">Frequent consumption of fast food can have an impact on overall health, including hormonal balance. It is important to assess dietary habits as they can contribute to weight gain, insulin resistance, and other factors associated with PCOS.</string>
    <string name="quest_regularExercise">Do you engage in regular exercise?</string>
    <string name="desc_regularExercise">Regular exercise plays a crucial role in maintaining overall health, managing weight, and promoting hormonal balance. Assessing exercise habits helps in understanding the level of physical activity and its potential impact on reproductive health.</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>