<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    tools:context=".ui.activity.WelcomePage">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="355dp"
        app:layout_constraintBaseline_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_welcome_page"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="bottom"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/hello"
            android:textColor="@color/purple_dark"
            android:textSize="22sp" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/welcome_desc"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints="email"
            android:backgroundTint="@color/white"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"

            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/login"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/create_account"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>