<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lavender"
        tools:context=".ui.activity.assessment.HairLossFragment">


        <TextView
            android:id="@+id/tvTitleAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/self_assessment"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="360dp"
            android:layout_height="580dp"
            android:background="@drawable/layout_rounded"
            android:backgroundTint="@color/white"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleAD">

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="500dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_hair_loss_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/quest_hairLoss"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_hair_loss_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingHorizontal="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/desc_hairLoss"
                    android:textColor="@color/grey_desc"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_optOneHair_loss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/question_border"
                    android:gravity="center"
                    android:onClick="onRegularOptionClicked"
                    android:padding="15dp"
                    android:text="@string/option_Yes"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_optTwoHair_loss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/question_border"
                    android:gravity="center"
                    android:onClick="onRegularOptionClicked"
                    android:padding="15dp"
                    android:text="@string/option_No"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/btnHairLoss_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/btnnext"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>